# universal_project_manager

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.ps1  upm_projects.json  upmconfig.toml
licenses/: Apache-2.0  BSD-3-Clause  GPL-2.0  LICENSES_README.md
scripts/: builddef.rs
src/: config.rs  list.rs  main.rs  open_project.bat  open_project.sh  packages.rs  project_database.rs  project_init.rs  project_management.rs  scripts.rs  secrets.rs  templates.rs  util.rs
templates/: TEMPLATES_README.md
