[package]
name = "upm"
version = "0.1.3"
edition = "2021"

description = "A CLI tool for managing universal projects."
license = "MIT"

[dependencies]
clap = "4.5.4"
regex = "1.10.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8.12"

[[bin]]
name = "upm"
path = "src/main.rs"